moudul for the equipment

--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -1,3 +1,6 @@
-<p>
-  admin-equipment works!
-</p>
+<h2>Add equipment</h2>
+  
+ <button mat-fab color="primary" (click)="openDialog()">
+    <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
+  </button>
+
