--- a/angular-client/src/app/main/main.component.html
+++ b/angular-client/src/app/main/main.component.html
@@ -1,3 +1,6 @@
-<h2>Add equipment</h2>
-<input type="text" name="text" (input)='alo($event)'>
-<button (click)="qays()">add</button>
+ <mat-toolbar-row>
+    <span>Second Line</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon">verified_user</mat-icon>
+  </mat-toolbar-row>
+<h1>Login</h1>
