add modul to the employee and projects

--- a/angular-client/src/app/admin-projects/admin-projects.component.html
+++ b/angular-client/src/app/admin-projects/admin-projects.component.html
@@ -1,3 +1,25 @@
-<p>
-  admin-projects works!
-</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Logo</span>
+        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
+        </button></a>
+        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
+        </button></a>
+        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
+        </button></a>
+        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
+        </button></a>
+        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
+        </button></a>
+    <span class="example-spacer">
+    </span>
+   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<h2>Add Projects</h2>
+  
+ <button mat-fab color="primary" (click)="openDialog()">
+    <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
+  </button>
+
