--- a/angular-client/src/app/main/main.component.html
+++ b/angular-client/src/app/main/main.component.html
@@ -1,6 +1,20 @@
- <mat-toolbar-row>
-    <span>Second Line</span>
-    <span class="example-spacer"></span>
-    <mat-icon class="example-icon">verified_user</mat-icon>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Logo</span>
+        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
+        </button></a>
+        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
+        </button></a>
+        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
+        </button></a>
+        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
+        </button></a>
+        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
+        </button></a>
+    <span class="example-spacer">
+    </span>
+   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
   </mat-toolbar-row>
+</mat-toolbar>
+
 <h1>Login</h1>
