--- a/angular-client/src/app/user-details/user-details.component.html
+++ b/angular-client/src/app/user-details/user-details.component.html
@@ -1,3 +1,22 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Logo</span>
+        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
+        </button></a>
+        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
+        </button></a>
+        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
+        </button></a>
+        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
+        </button></a>
+        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
+        </button></a>
+    <span class="example-spacer">
+    </span>
+   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
+  </mat-toolbar-row>
+</mat-toolbar>
+
 <p>
   user-details works!
 </p>
