--- a/angular-client/src/app/user-projects/user-projects.component.html
+++ b/angular-client/src/app/user-projects/user-projects.component.html
@@ -1,3 +1,52 @@
-<p>
-  user-projects works!
-</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Logo</span>
+        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
+        </button></a>
+        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
+        </button></a>
+        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
+        </button></a>
+        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
+        </button></a>
+        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
+        </button></a>
+    <span class="example-spacer">
+    </span>
+   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="weight">
+    <th mat-header-cell *matHeaderCellDef> Weight </th>
+    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="symbol">
+    <th mat-header-cell *matHeaderCellDef> Symbol </th>
+    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
