functions to add to the database

--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -23,4 +23,6 @@
     <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
   </button>
 
-<!-- <div *ngFor="let hero of equip">{{hero.name}}</div> -->
+<div *ngFor="let hero of equip">
+  <h2>{{hero.name}}</h2>
+</div>
