--- a/angular-client/src/app/admin-employees/dialog-data-employees.html
+++ b/angular-client/src/app/admin-employees/dialog-data-employees.html
@@ -1,24 +1,24 @@
 <h1 mat-dialog-title>Add Employee</h1>
 <div mat-dialog-content>
-	 <mat-form-field class="example-full-width">
-    <input matInput type="number" placeholder="Emplyee id" (input)='alo($event)'>
+  <mat-form-field class="example-full-width">
+    <input matInput type="number" placeholder="Emplyee id" [(ngModel)]="id">
   </mat-form-field>
   <br>
-  
- <mat-form-field class="example-full-width">
-    <input matInput type="text" placeholder="Emplyee name" (input)='alo($event)'>
+
+  <mat-form-field class="example-full-width">
+    <input matInput type="text" placeholder="Emplyee name" [(ngModel)]="name">
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width">
-    <input matInput type="text" placeholder="Emplyee nationality" (input)='alo($event)'>
+    <input matInput type="text" placeholder="Emplyee nationality" [(ngModel)]="nationality">
   </mat-form-field>
-  <br><mat-form-field class="example-full-width">
-    <input matInput type="text" placeholder="Emplyee JobTitle" (input)='alo($event)'>
+  <br>
+  <mat-form-field class="example-full-width">
+    <input matInput type="text" placeholder="Emplyee JobTitle" [(ngModel)]="JobTitle">
   </mat-form-field>
   <br>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add()">Add</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(id , name , nationality, JobTitle)">Add</button>
 </div>
- <!-- <button mat-raised-button color="primary">Add</button> -->
