--- a/angular-client/src/app/admin-equipment/dialog-data-equipment.html
+++ b/angular-client/src/app/admin-equipment/dialog-data-equipment.html
@@ -9,9 +9,9 @@
   </mat-form-field>
   <br>
 
-  <input type="file" placeholder="equipment attachment" (change)="Image($event)">
+  <input type="file" placeholder="equipment attachment" (change)="uploadImage($event)">
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(name , serialNumber , attachment)">Add</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(name , serialNumber)">Add</button>
 </div>
