--- a/angular-client/src/app/admin-employees/admin-employees.component.html
+++ b/angular-client/src/app/admin-employees/admin-employees.component.html
@@ -21,3 +21,23 @@
 <button mat-fab color="primary" (click)="openDialog()">
   <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
 </button>
+<br>
+
+<div *ngFor="let item of empData">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Name : {{item.name}}</mat-card-title>
+      <mat-card-subtitle>Nationality: {{item.nationality}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <h3>Job Title</h3>
+      <h4>
+        {{item.jobTitle}}
+      </h4>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="deleteEmp(item._id)">Delete</button>
+      <button mat-button (click)="updateDialog(item.name, item.nationality, item.jobTitle)">Update</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
