--- a/angular-client/src/app/admin-projects/admin-projects.component.css
+++ b/angular-client/src/app/admin-projects/admin-projects.component.css
@@ -1,11 +1,14 @@
 .example-icon {
-  padding: 0 14px;
-}
-
-.example-spacer {
-  flex: 100 1 ;
-}
-.navButton {
-	left: 200px;
-	margin:5px;
-}
+    padding: 0 14px;
+  }
+  
+  .example-spacer {
+    flex: 100 1 ;
+  }
+  .navButton {
+      left: 200px;
+      margin:5px;
+  }
+  .example-card {
+    max-width: 400px;
+  }
