--- a/angular-client/src/app/admin-projects/admin-projects.component.html
+++ b/angular-client/src/app/admin-projects/admin-projects.component.html
@@ -1,25 +1,43 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>Logo</span>
-        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
-        </button></a>
-        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
-        </button></a>
-        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
-        </button></a>
-        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
-        </button></a>
-        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
-        </button></a>
+    <a routerLink="/admin-equipment" routerLinkActive="active"><button mat-raised-button class="navButton">Admin
+        equipment
+      </button></a>
+    <a routerLink="/admin-employees"><button mat-raised-button class="navButton">Admin employees
+      </button></a>
+    <a routerLink="/admin-projects"><button mat-raised-button class="navButton">Admin projects
+      </button></a>
     <span class="example-spacer">
     </span>
-   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
+    <a>
+      <mat-icon class="example-icon" (click)="logout()">logout</mat-icon>
+    </a>
   </mat-toolbar-row>
 </mat-toolbar>
 
 <h2>Add Projects</h2>
-  
- <button mat-fab color="primary" (click)="openDialog()">
-    <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
-  </button>
 
+<button mat-fab color="primary" (click)="openDialog()">
+  <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
+</button>
+
+
+<div *ngFor="let item of proData">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Project Name : {{item.name}}</mat-card-title>
+      <mat-card-subtitle>Type: {{item.type}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <h3>ID</h3>
+      <h4>
+        {{item.id}}
+      </h4>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Delete</button>
+      <button mat-button>Update</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
