--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -34,8 +34,8 @@
         </h4>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="deleteEmp(item._id)">Delete</button>
-        <button mat-button (click)="updateDialog(item.name, item.nationality, item.jobTitle)">Update</button>
+        <button mat-button (click)="deleteEquip(item._id)">Delete</button>
+        <button mat-button (click)="updateDialog()">Update</button>
       </mat-card-actions>
     </mat-card>
   </div>
