update function and delete

--- a/angular-client/src/app/admin-employees/dialog-data-update-employees.html
+++ b/angular-client/src/app/admin-employees/dialog-data-update-employees.html
@@ -4,9 +4,8 @@
     <input matInput type="number" placeholder="Emplyee id" [(ngModel)]="id" >
   </mat-form-field>
   <br>
-
   <mat-form-field class="example-full-width">
-    <input matInput type="text" placeholder="Emplyee name" value={{data.name}}>
+    <input matInput type="text" placeholder="Emplyee name" [(ngModel)]="name">
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width">
