--- a/angular-client/src/app/admin-employees/admin-employees.component.html
+++ b/angular-client/src/app/admin-employees/admin-employees.component.html
@@ -37,7 +37,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-button (click)="deleteEmp(item._id)">Delete</button>
-      <button mat-button (click)="updateDialog(item.name, item.nationality, item.jobTitle)">Update</button>
+      <button mat-button (click)="updateDialog()">Update</button>
     </mat-card-actions>
   </mat-card>
 </div>
