--- a/angular-client/src/app/admin-projects/admin-projects.component.html
+++ b/angular-client/src/app/admin-projects/admin-projects.component.html
@@ -36,8 +36,8 @@
       </h4>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>Delete</button>
-      <button mat-button>Update</button>
+      <button mat-button (click)="deleteProject(item._id)">Delete</button>
+      <button mat-button (click)="updateDialog()">Update</button>
     </mat-card-actions>
   </mat-card>
 </div>
