--- a/angular-client/src/app/user-details/user-details.component.html
+++ b/angular-client/src/app/user-details/user-details.component.html
@@ -1,22 +1,64 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Logo</span>
-        <a routerLink="/admin-equipment" routerLinkActive="active" ><button mat-raised-button  class="navButton">Admin equipment
-        </button></a>
-        <a routerLink="/admin-employees" ><button mat-raised-button  class="navButton">Admin employees
-        </button></a>
-        <a routerLink="/admin-projects" ><button mat-raised-button  class="navButton">Admin projects
-        </button></a>
-        <a routerLink="/user-projects" ><button mat-raised-button  class="navButton">User Project
-        </button></a>
-        <a routerLink="/user-details" ><button mat-raised-button  class="navButton">User Details
-        </button></a>
-    <span class="example-spacer">
-    </span>
-   <a routerLink="/main"> <mat-icon class="example-icon">person</mat-icon></a>
-  </mat-toolbar-row>
+    <mat-toolbar-row>
+        <span>Logo</span>
+        <a routerLink="/user-project" routerLinkActive="active"><button mat-raised-button class="navButton">User
+                Project
+            </button></a>
+        <a routerLink="/user-details"><button mat-raised-button class="navButton">User Details
+            </button></a>
+        <span class="example-spacer">
+        </span>
+        <a (click)="openDialog()">
+            <mat-icon class="example-icon">person</mat-icon>
+        </a>
+    </mat-toolbar-row>
 </mat-toolbar>
 
-<p>
-  user-details works!
-</p>
+<h1>Prject Name</h1>
+<h3>Employees</h3>
+<div class="row">
+    <div class="col-sm-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">System Employees</div>
+            <ul class="list-group">
+                <li draggable *ngFor="let item of empData" [dragData]="item" class="list-group-item">{{item.name}}</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class="panel panel-default" droppable (onDrop)="onItemDropEmp($event)">
+            <div class="panel-heading">Assigned Employees</div>
+            <div class="panel-body">
+                <li *ngFor="let item of droppedEmp" class="list-group-item">{{item.name}}</li>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<br>
+
+<h3>Equipment</h3>
+<div class="row">
+    <div class="col-sm-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">System Equipment</div>
+            <ul class="list-group">
+                <li draggable *ngFor="let item of equipData" [dragData]="item" class="list-group-item">{{item.name}}</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class="panel panel-default" droppable (onDrop)="onItemDropEquip($event)">
+            <div class="panel-heading">Assigned Equipment</div>
+            <div class="panel-body">
+                <li *ngFor="let item of droppedEquip" class="list-group-item">{{item.name}}</li>
+            </div>
+        </div>
+    </div>
+</div>
+
+<a routerLink="/user-project"><button mat-raised-button color="accent">Back</button></a>
+<button mat-raised-button color="accent" (click)="save()">Save</button>
