--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -35,7 +35,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button (click)="deleteEquip(item._id)">Delete</button>
-        <button mat-button (click)="updateDialog()">Update</button>
+        <button mat-button (click)="updateDialog(item._id)">Update</button>
       </mat-card-actions>
     </mat-card>
   </div>
