--- a/angular-client/src/app/admin-equipment/dialog-data-update-equipment.html
+++ b/angular-client/src/app/admin-equipment/dialog-data-update-equipment.html
@@ -11,5 +11,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Update(name , serialNumber)">Update</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Update(data.id, name , serialNumber)">Update</button>
 </div>
