detele the id from the html and ts files

--- a/angular-client/src/app/admin-employees/dialog-data-update-employees.html
+++ b/angular-client/src/app/admin-employees/dialog-data-update-employees.html
@@ -1,10 +1,6 @@
 <h1 mat-dialog-title>Update Employee</h1>
 <div mat-dialog-content>
   <mat-form-field class="example-full-width">
-    <input matInput type="number" placeholder="Emplyee id" [(ngModel)]="id" >
-  </mat-form-field>
-  <br>
-  <mat-form-field class="example-full-width">
     <input matInput type="text" placeholder="Emplyee name" [(ngModel)]="name">
   </mat-form-field>
   <br>
@@ -19,5 +15,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Update(id , name , nationality, JobTitle)">Update</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Update(data.id , name , nationality, JobTitle)">Update</button>
 </div>
