--- a/angular-client/src/app/admin-projects/dialog-data-projects.html
+++ b/angular-client/src/app/admin-projects/dialog-data-projects.html
@@ -1,10 +1,6 @@
 <h1 mat-dialog-title>Add Project</h1>
 <div mat-dialog-content>
   <mat-form-field class="example-full-width">
-    <input matInput type="number" placeholder="Project id" [(ngModel)]="id">
-  </mat-form-field>
-  <br>
-  <mat-form-field class="example-full-width">
     <input matInput type="text" placeholder="Project name" [(ngModel)]="name">
   </mat-form-field>
   <br>
@@ -21,5 +17,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(id, name, type, from, to)">Add</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(name, type, from, to)">Add</button>
 </div>
