--- a/angular-client/src/app/admin-employees/dialog-data-employees.html
+++ b/angular-client/src/app/admin-employees/dialog-data-employees.html
@@ -1,11 +1,6 @@
 <h1 mat-dialog-title>Add Employee</h1>
 <div mat-dialog-content>
   <mat-form-field class="example-full-width">
-    <input matInput type="number" placeholder="Emplyee id" [(ngModel)]="id">
-  </mat-form-field>
-  <br>
-
-  <mat-form-field class="example-full-width">
     <input matInput type="text" placeholder="Emplyee name" [(ngModel)]="name">
   </mat-form-field>
   <br>
@@ -20,5 +15,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(id , name , nationality, JobTitle)">Add</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="Add(name , nationality, JobTitle)">Add</button>
 </div>
