--- a/angular-client/src/app/admin-projects/admin-projects.component.html
+++ b/angular-client/src/app/admin-projects/admin-projects.component.html
@@ -37,7 +37,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-button (click)="deleteProject(item._id)">Delete</button>
-      <button mat-button (click)="updateDialog()">Update</button>
+      <button mat-button (click)="updateDialog(item.id)">Update</button>
     </mat-card-actions>
   </mat-card>
 </div>
