--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
   <mat-toolbar-row>
     <span>Logo</span>
     <a routerLink="/admin-equipment" routerLinkActive="active"><button mat-raised-button class="navButton">Admin
@@ -15,27 +15,34 @@
     </a>
   </mat-toolbar-row>
 </mat-toolbar>
-<h2>Add equipment</h2>
-
-<button mat-fab color="primary" (click)="openDialog()">
-  <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
-</button>
-
-<div *ngFor="let item of equipData">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Name : {{item.name}}</mat-card-title>
-        <mat-card-subtitle>Nationality: {{item.serialNumber}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <h3>Job Title</h3>
-        <h4>
-          {{item.jobTitle}}
-        </h4>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button (click)="deleteEquip(item._id)">Delete</button>
-        <button mat-button (click)="updateDialog(item._id)">Update</button>
-      </mat-card-actions>
-    </mat-card>
+<br>
+<br>
+<div class="container">
+  <button mat-fab color="accent" (click)="openDialog()">
+    <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
+  </button>
+  <br>
+  <br>
+  <br>
+  <div class="row">
+    <div *ngFor="let item of equipData">
+      <div class="col-sm-6">
+        <mat-card class="example-card">
+          <mat-card-actions>
+            <button mat-icon-button (click)="deleteEquip(item._id)">
+              <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
+            </button>
+            <button mat-icon-button (click)="updateDialog(item._id)">
+              <mat-icon aria-label="Example icon-button with a heart icon">update</mat-icon>
+            </button>
+          </mat-card-actions>
+          <mat-card-header>
+            <mat-card-title>Name : {{item.name}}</mat-card-title>
+            <mat-card-subtitle>Nationality: {{item.serialNumber}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="{{item.attachment}}" alt="Photo">  
+        </mat-card>
+      </div>
+    </div>
   </div>
+</div>
