--- a/angular-client/src/app/admin-projects/admin-projects.component.html
+++ b/angular-client/src/app/admin-projects/admin-projects.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
   <mat-toolbar-row>
     <span>Logo</span>
     <a routerLink="/admin-equipment" routerLinkActive="active"><button mat-raised-button class="navButton">Admin
@@ -15,29 +15,33 @@
     </a>
   </mat-toolbar-row>
 </mat-toolbar>
-
-<h2>Add Projects</h2>
-
-<button mat-fab color="primary" (click)="openDialog()">
-  <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
-</button>
-
-
-<div *ngFor="let item of proData">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>Project Name : {{item.name}}</mat-card-title>
-      <mat-card-subtitle>Type: {{item.type}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <h3>ID</h3>
-      <h4>
-        {{item.id}}
-      </h4>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button (click)="deleteProject(item._id)">Delete</button>
-      <button mat-button (click)="updateDialog(item.id)">Update</button>
-    </mat-card-actions>
-  </mat-card>
+<br>
+<br>
+<div class="container">
+  <button mat-fab color="accent" (click)="openDialog()">
+    <mat-icon aria-label="Example icon-button with a plus icon">add</mat-icon>
+  </button>
+  <br>
+  <br>
+  <br>
+  <div class="row">
+    <div *ngFor="let item of proData">
+      <div class="col-sm-6">
+        <mat-card class="example-card">
+          <mat-card-actions>
+            <button mat-icon-button (click)="deleteProject(item._id)">
+              <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
+            </button>
+            <button mat-icon-button (click)="updateDialog(item.id)">
+              <mat-icon aria-label="Example icon-button with a heart icon">update</mat-icon>
+            </button>
+          </mat-card-actions>
+          <mat-card-header>
+            <mat-card-title>Project Name : {{item.name}}</mat-card-title>
+            <mat-card-subtitle>Type: {{item.type}}</mat-card-subtitle>
+          </mat-card-header>
+        </mat-card>
+      </div>
+    </div>
+  </div>
 </div>
