change html home to be the first page

--- a/angular-client/src/app/home/home.component.html
+++ b/angular-client/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<img src="https://s3-eu-west-1.amazonaws.com/brussels-images/content/gallery/ing_logo_sq_640.jpg">
+<app-user-projects></app-user-projects>
