fix some bugs in add equipment, fix drag and drop bug

--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -29,7 +29,7 @@
       <div class="col-sm-6">
         <mat-card class="example-card">
           <mat-card-actions>
-            <button mat-icon-button (click)="deleteEquip(item._id)">
+            <button mat-icon-button (click)="deteleEquip(item._id)">
               <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
             </button>
             <button mat-icon-button (click)="updateDialog(item._id)">
