fix bugs in admin pages and add new calender to the project html

--- a/angular-client/src/app/admin-employees/admin-employees.component.html
+++ b/angular-client/src/app/admin-employees/admin-employees.component.html
@@ -40,6 +40,7 @@
           <mat-card-header>
             <mat-card-title>Name : {{item.name}}</mat-card-title>
             <mat-card-subtitle>Nationality: {{item.nationality}}</mat-card-subtitle>
+            <mat-card-subtitle>Job Title: {{item.jobTitle}}</mat-card-subtitle>
           </mat-card-header>
         </mat-card>
       </div>
