--- a/angular-client/src/app/admin-equipment/admin-equipment.component.html
+++ b/angular-client/src/app/admin-equipment/admin-equipment.component.html
@@ -38,7 +38,7 @@
           </mat-card-actions>
           <mat-card-header>
             <mat-card-title>Name : {{item.name}}</mat-card-title>
-            <mat-card-subtitle>Nationality: {{item.serialNumber}}</mat-card-subtitle>
+            <mat-card-subtitle>Serial Number : {{item.serialNumber}}</mat-card-subtitle>
           </mat-card-header>
           <img mat-card-image src="{{item.attachment}}" alt="Photo">  
         </mat-card>
