--- a/angular-client/src/app/user-projects/user-projects.component.html
+++ b/angular-client/src/app/user-projects/user-projects.component.html
@@ -34,12 +34,12 @@
 
   <ng-container matColumnDef="fromDate">
     <th mat-header-cell *matHeaderCellDef> From Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.fromDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.fromDate | slice:0:10}}</td>
   </ng-container>
 
   <ng-container matColumnDef="toDate">
     <th mat-header-cell *matHeaderCellDef> To Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.toDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.toDate | slice:0:10}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
